# ArUco-Detection-

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md
config/: drive_config.json  drive_config.json.example
src/: main.cpp
src/network/: udp_sender.h
src/pipeline/: frame_source.h  image_sequence_source.cpp  image_sequence_source.h  nvargus_source.cpp  nvargus_source.h  v4l2_source.cpp  v4l2_source.h  video_file_source.cpp  video_file_source.h
src/processing/: aruco_tracker.cpp  aruco_tracker.h  frame_writer.h  motion_types.h  motion_update.h
src/util/: csv_logger.h  ring_buffer.h
streamer/: streamer.py
tools/: drive_uploader.py  requirements.txt
